Switched Home Page With Index

--- a/pages/CheckOut.html
+++ b/pages/CheckOut.html
@@ -444,6 +444,7 @@
         </div>
     </section>
     <script src="/js/CheckOut.js"></script>
+    <script src="/js/main.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
