--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header class="container-fluid bg-primary">
+    <header class="container-fluid bg-secondary p-4">
       
       <!-- navbar Section -->
-      <nav class="navbar navbar-expand-md bg-body-tertiary">
+      <nav class="navbar navbar-expand-md">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">UltraWave</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,14 +36,14 @@
               </li>
             </ul>
             <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <input id="searchInput" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button id="searchButton" class="btn btn-primary" type="submit">Search</button>
             </form>
           </div>
         </div>
       </nav>
       <!-- Hero Section -->
-      <div class="container bg-primary text-white text-center py-3">
+      <div class="container text-white text-center py-3">
         <h1>Welcome to Our Store</h1>
         <p>Shop the latest trends with great deals!</p>
       </div>
